# generic_math

./: .clang-format  .clang-format-ignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  FORMATTING.md  example_usage.cpp  explain_effective_kappa.cpp  format_code.sh  test_ad.cpp  test_analytical_bridge_variance.cpp  test_analytical_bridges.cpp  test_asymmetric_bridge.cpp  test_black76.cpp  test_bs_ad_bench.cpp  test_bs_hessian_bench.cpp  test_bvn_ad_bench.cpp  test_chain_ad.cpp  test_cir_bridge.cpp  test_cir_bridge_distribution.cpp  test_fast_exp_log.cpp  test_g2pp_bridge.cpp  test_g2pp_discretization.cpp  test_gbm_bridge.cpp  test_improved_bridges.cpp  test_interp_ad_bench.cpp  test_interpolation.cpp  test_markets.cpp  test_math.cpp  test_mcfarland.cpp  test_mixed_hessian.cpp  test_nonlinear_corrections.cpp  test_precomputed_gradients.cpp  test_pricer_hessian.cpp  test_theoretical_bridge_variance.cpp  test_ziggurat.cpp
Markets/: CMakeLists.txt  MarketData.h
Markets/Curves/: IRCurve.h  SurvivalProbabilityCurve.h  YieldCurve.h
Markets/Data/: EQDData.h  FXRate.h
Markets/Descriptors/: CreditDescriptor.h  EQDDescriptor.h  FXDescriptor.h  IRCurveDescriptor.h  IRVolDescriptor.h  YieldCurveDescriptor.h
Markets/Volatility/: EQDVolatility.h  FXVolatility.h  IRVolatility.h
Math/: CMakeLists.txt  GaussianQuadrature.h  Interpolations.h  McFarlandNormal.h  NumericalMethods.h  PCGExtras.hpp  PCGRandom.hpp  README.md  Solver1D.h  ZigguratNormal.h
Math/Integrals/: GaussLobattoIntegrator.h  GaussianQuadrature.h  Integrator.h  SimpsonIntegrator.h  TrapezoidIntegrator.h
Math/Interpolations/: BicubicInterpolation.h  BilinearInterpolation.h  CubicInterpolation.h  CubicSplineInterpolation.h  Interpolation.h  Interpolation2D.h  LinearInterpolation.h  LogLinearInterpolation.h
Math/Sobol/: CBCSearch.h  DirectionNumbers.h  GF2.h
Math/Solvers/: BisectionSolver.h  BrentSolver.h  FalsePositionSolver.h  NewtonSolver.h  RidderSolver.h  SecantSolver.h  Solver1DBase.h  TridiagonalSolver.h
Models/: CIRModel.cpp  CIRModel.h  CIRPPModel.cpp  CIRPPModel.h  CMakeLists.txt  GBMModel.h  HestonModel.cpp  HestonModel.h  JCIRPPModel.cpp  JCIRPPModel.h
Pricing/: BlackScholes.h  BlackScholesDetail.h  StanPrimitives.h
ScenarioGeneration/: BrownianMotion.cpp  BrownianMotion.h  CMakeLists.txt  CreditGenerator.cpp  CreditGenerator.h  CreditSimulator.cpp  CreditSimulator.h  EquityGenerator.cpp  EquityGenerator.h  EquitySimulator.cpp  EquitySimulator.h  ModelGenerator.cpp  ModelGenerator.h  ModelSimulator.cpp  ModelSimulator.h  MonteCarloSimulator.cpp  MonteCarloSimulator.h
docs/: american_option_bridge_correction.md  bergomi_calibration.md  hessian_ad_design.md
tools/: extend_sobol.cpp
